<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <Button
        android:id="@+id/HomeNL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="433dp"
        android:layout_marginBottom="194dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_three"
        app:iconPadding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/AutoNL"
        app:layout_constraintStart_toStartOf="@+id/AutoNL"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <Button
        android:id="@+id/HomeNS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="257dp"
        android:layout_marginTop="433dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="194dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_four"
        app:iconPadding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <Button
        android:id="@+id/AutoNL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="393dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_one"
        android:textColor="@color/white"
        app:iconPadding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <Button
        android:id="@+id/AutoNS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/button_two"
        android:textColor="@color/white"
        app:iconPadding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/AutoNL"
        app:layout_constraintEnd_toEndOf="@+id/HomeNS"
        app:layout_constraintStart_toStartOf="@+id/HomeNS"
        app:layout_constraintTop_toTopOf="@+id/AutoNL" />

    <TextView
        android:id="@+id/header_one"
        android:layout_width="238dp"
        android:layout_height="89dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="560dp"
        android:text="@string/header_one"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <TextView
        android:id="@+id/header_two"
        android:layout_width="184dp"
        android:layout_height="38dp"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="492dp"
        android:text="@string/header_two"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/header_three"
        app:layout_constraintStart_toStartOf="@+id/header_three"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <TextView
        android:id="@+id/header_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:layout_marginBottom="284dp"
        android:text="@string/header_three"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/header_four"
        app:layout_constraintStart_toStartOf="@+id/header_four"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <TextView
        android:id="@+id/header_four"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginTop="564dp"
        android:layout_marginBottom="81dp"
        android:text="@string/header_four"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/header_five"
        app:layout_constraintStart_toStartOf="@+id/header_five"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

    <TextView
        android:id="@+id/header_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="20dp"
        android:text="@string/header_five"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />

</androidx.constraintlayout.widget.ConstraintLayout>